--- a/Mail Man/Mail Man/MainWindow.xaml
+++ b/Mail Man/Mail Man/MainWindow.xaml
@@ -11,13 +11,13 @@
             <ColumnDefinition Width="200*"/>
             <ColumnDefinition Width="900*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="btn_home" Content="Home" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="72" Width="180" Foreground="#FFFF7B00" FontSize="20" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#FF181615" BorderBrush="#FF181615" Click="btn_home_Click"/>
-        <Button x:Name="btn_registration" Content="Registration" HorizontalAlignment="Center" Margin="0,100,0,0" VerticalAlignment="Top" Height="62" Width="180" Click="btnRegistration" Foreground="#FFFF7B00" Background="#FF181615" FontSize="20" FontFamily="Arial Rounded MT Bold" BorderBrush="#FF181615" FontWeight="Bold"/>
-        <Button x:Name="btn_order" Content="Order" HorizontalAlignment="Center" Margin="0,190,0,0" VerticalAlignment="Top" Height="55" Width="180" Click="btn_order_Click" Background="#FF181615" Foreground="#FFFF7B00" BorderBrush="#FF181615" FontSize="20" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
-        <Button x:Name="btn_report" Content="Report of orders" HorizontalAlignment="Center" VerticalAlignment="Center" Height="69" Width="180" Click="btn_report_Click" Foreground="#FFFF7B00" Background="#FF181615" BorderBrush="#FF181615" FontSize="14" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
-        <Button x:Name="btn_show_information" Content="Show information" HorizontalAlignment="Center" Margin="0,344,0,0" VerticalAlignment="Top" Height="68" Width="180" Click="btn_show_information_Click" Background="#FF181615" Foreground="#FFFF7B00" BorderBrush="#FF181615" FontSize="14" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
+        <Button x:Name="btn_home" Content="Home" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="72" Width="180" Foreground="#FFFF7B00" FontSize="16" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#FF181615" BorderBrush="#FF181615" Click="btn_home_Click"/>
+        <Button x:Name="btn_registration" Content="Registration" HorizontalAlignment="Center" Margin="0,100,0,0" VerticalAlignment="Top" Height="62" Width="180" Click="btnRegistration" Foreground="#FFFF7B00" Background="#FF181615" FontSize="16" FontFamily="Arial Rounded MT Bold" BorderBrush="#FF181615" FontWeight="Bold"/>
+        <Button x:Name="btn_order" Content="Order" HorizontalAlignment="Center" Margin="0,190,0,0" VerticalAlignment="Top" Height="55" Width="180" Click="btn_order_Click" Background="#FF181615" Foreground="#FFFF7B00" BorderBrush="#FF181615" FontSize="16" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
+        <Button x:Name="btn_report" Content="Report of orders" HorizontalAlignment="Center" VerticalAlignment="Center" Height="69" Width="180" Click="btn_report_Click" Foreground="#FFFF7B00" Background="#FF181615" BorderBrush="#FF181615" FontSize="16" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
+        <Button x:Name="btn_show_information" Content="Show information" HorizontalAlignment="Center" Margin="0,344,0,0" VerticalAlignment="Top" Height="68" Width="180" Click="btn_show_information_Click" Background="#FF181615" Foreground="#FFFF7B00" BorderBrush="#FF181615" FontSize="16" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
         <Border BorderBrush="#FF1B1818" BorderThickness="1" Background="#FF181615" Panel.ZIndex="-10">
-            <Button x:Name="logout_btn" Click="logout_btn_Click" Content="Log out" Margin="-1,461,0,70" Background="#FF181615" BorderBrush="#FF181615" Foreground="#FFFF7B00" FontSize="14" FontWeight="Bold" FontFamily="Arial Rounded MT Bold"/>
+            <Button x:Name="logout_btn" Click="logout_btn_Click" Content="Log out" Margin="-1,461,0,70" Background="#FF181615" BorderBrush="#FF181615" Foreground="#FFFF7B00" FontSize="16" FontWeight="Bold" FontFamily="Arial Rounded MT Bold"/>
         </Border>
         <TextBlock HorizontalAlignment="Center" Margin="0,535,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/></TextBlock>
 
@@ -25,7 +25,7 @@
             <TextBox HorizontalAlignment="Center" Margin="0,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="320" Height="41" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Name ="tbUsername" LostFocus="tbUsername_LostFocus" TextChanged="tbUsername_TextChanged"/>
             <Label FontSize="15" Visibility="Visible" Foreground="Red" HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="30" Margin="56,207,56,0" RenderTransformOrigin="0.499,0.553" Name="lblError" ></Label>
             <TextBox x:Name="tbUsername_Watermark" HorizontalAlignment="Center" Margin="0,166,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="320" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="Gray" Height="41" GotFocus="tbUsername_Watermark_GotFocus" Text="SSN"/>
-            <Button Content="Search" Click="btnSearch_user" HorizontalAlignment="Center" Margin="0,257,0,0" VerticalAlignment="Top" Height="43" Width="200">
+            <Button Content="Search" Click="btnSearch_user" HorizontalAlignment="Center" Margin="0,257,0,0" VerticalAlignment="Top" Height="43" Width="200" FontWeight="Bold" FontSize="16">
                 <Button.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FFB52121"/>
@@ -41,7 +41,7 @@
             <TextBlock HorizontalAlignment="Left" Margin="27,33,0,0" TextWrapping="Wrap" Text="Welcome to oredering page" VerticalAlignment="Top" Height="51" Width="350" Foreground="White" FontSize="24" FontWeight="Bold"/>
         </Grid>
 
-        <Grid x:Name="grid_ordering" Grid.Column="1" Visibility="Visible">
+        <Grid x:Name="grid_ordering" Grid.Column="1" Visibility="Collapsed">
             <TextBox x:Name="recieveadress_txt" HorizontalAlignment="Left" Margin="587,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218" Height="32" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" Background="#FF181615"/>
             <TextBox x:Name="sendaddress_txt" HorizontalAlignment="Left" Margin="41,77,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218" Height="31" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" Background="#FF181615"/>
             <CheckBox x:Name="expensive_checkbox" Content="Expensive" HorizontalAlignment="Left" Margin="587,298,0,0" VerticalAlignment="Top" Height="24" Width="218" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
@@ -49,7 +49,7 @@
             <TextBlock x:Name="showtotal_txtblock" HorizontalAlignment="Left" Margin="80,409,0,0" TextWrapping="Wrap" FontSize="22" VerticalAlignment="Top" Height="46" Width="179" Background="Black" Foreground="#FF0B821D" Text=""/>
             <TextBlock x:Name="total_txtblock" HorizontalAlignment="Left" Margin="10,416,0,0" TextWrapping="Wrap" Text="Total : " VerticalAlignment="Top" Height="29" Width="109" Foreground="#FF0B821D" FontSize="24"/>
             <Button x:Name="calculation_btn" Click="calculation_btn_Click" Content="Calculation" HorizontalAlignment="Left" Margin="41,507,0,0" VerticalAlignment="Top" Height="39" Width="218" Background="#FF181615" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
-            <Button x:Name="submit_bin" Click="submit_bin_Click" Content="Submit" HorizontalAlignment="Left" Margin="587,507,0,0" VerticalAlignment="Top" Height="39" Width="218" Background="#FFFF7B00" BorderBrush="#FF181615" Foreground="#FF181615" FontSize="18"/>
+            <Button x:Name="submit_bin" Click="submit_bin_Click" Content="Submit" HorizontalAlignment="Left" Margin="587,507,0,0" VerticalAlignment="Top" Height="39" Width="218" Background="#FFFF7B00" BorderBrush="#FF181615" Foreground="#FF181615" FontSize="18" FontWeight="Bold"/>
             <TextBlock x:Name="weigh_txtblock" HorizontalAlignment="Left" Margin="587,136,0,0" TextWrapping="Wrap" Text="Weigh" VerticalAlignment="Top" Height="37" Width="109" FontSize="24">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -98,12 +98,36 @@
 
         </Grid>
 
-        <Grid x:Name="grid_reportOfOrders" Margin="5,10,0,-10" Grid.Column="1" Visibility="Collapsed">
-            <TextBlock x:Name="txtblock_ssn" HorizontalAlignment="Left" Margin="56,65,0,0" TextWrapping="Wrap" Text="SSN" VerticalAlignment="Top" Height="36" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"/>
-            <TextBlock x:Name="txtblock_pricepaid" HorizontalAlignment="Left" Margin="56,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Price Paid"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="txtblock_weigh" HorizontalAlignment="Left" Margin="56,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Weigh"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="txtblock_postType" HorizontalAlignment="Left" Margin="56,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Post Type"/><LineBreak/><Run/></TextBlock>
-            <Button Content="Search&#xD;&#xA;" Click="btnSearch_order" Margin="597,498,88,49" Background="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="30" FontFamily="Bahnschrift Condensed"/>
+        <Grid x:Name="grid_reportOfOrders" Margin="5,10,0,-10" Grid.Column="1" Visibility="Visible">
+            <TextBlock x:Name="txtblock_ssn" HorizontalAlignment="Left" Margin="56,65,0,0" TextWrapping="Wrap" Text="SSN" VerticalAlignment="Top" Height="36" Width="132" Cursor="" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <TextBlock x:Name="txtblock_pricepaid" HorizontalAlignment="Left" Margin="56,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground><Run Text="Price Paid"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="txtblock_weigh" HorizontalAlignment="Left" Margin="56,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground><Run Text="Weigh"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="txtblock_postType" HorizontalAlignment="Left" Margin="56,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground><Run Text="Post Type"/><LineBreak/><Run/></TextBlock>
             <TextBlock x:Name="txtblock_packagecontent" HorizontalAlignment="Left" Margin="56,148,0,0" TextWrapping="Wrap" Text="Package Content" VerticalAlignment="Top" Height="37" Width="218" FontSize="24">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -120,6 +144,7 @@
             <TextBox x:Name="personalID_txt_as" HorizontalAlignment="Center" Margin="0,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218" Height="36"/>
             <TextBox x:Name="pricePaid_txt_as" HorizontalAlignment="Center" Margin="0,256,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218" Height="36"/>
             <TextBox x:Name="weight_txt_as" HorizontalAlignment="Center" Margin="0,344,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218" Height="32"/>
+            <Button Content="Search" Click="btnSearch_order" HorizontalAlignment="Left" Margin="593,466,0,0" VerticalAlignment="Top" Height="42" Width="266" Background="#FFFF7B00" BorderBrush="#FFFF7B00" FontWeight="Bold" FontSize="24"/>
         </Grid>
 
         <Grid x:Name="grid_checkpackage" Grid.Column="1" Visibility="Collapsed" >
