--- a/Mail Man/Mail Man/ClientMenu.xaml
+++ b/Mail Man/Mail Man/ClientMenu.xaml
@@ -68,7 +68,8 @@
             <CheckBox x:Name="object_checkbox_as" Checked="object_checkbox_Checked" Content="Object" HorizontalAlignment="Left" Margin="349,195,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
         </Grid>
         <Grid x:Name="grid_showinformation" Margin="205,0,0,0" Visibility ="Collapsed">
-            <TextBox HorizontalAlignment="Left" Margin="45,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="291" Height="38" BorderBrush="#FFFF7B00" Background="Black"/>
+            <TextBox x:Name="tbPackageID" HorizontalAlignment="Left" Margin="45,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="291" Height="38" Foreground="White" BorderBrush="#FFFF7B00" Background="Black"/>
+            <Label x:Name="lblError_findpackage" VerticalContentAlignment="Center" Visibility="Collapsed" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Width="276" Height="43" Content="*No package found!*" Foreground="Red" Margin="52,124,0,0" />
             <TextBlock HorizontalAlignment="Left" Margin="45,36,0,0" TextWrapping="Wrap" Text="Order ID" VerticalAlignment="Top" Height="38" Width="143" FontSize="24">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -77,7 +78,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
-            <Button x:Name="btnSearch_package" Click="btnSearch_package_Click" Content="Show" HorizontalAlignment="Left" Margin="448,86,0,0" VerticalAlignment="Top" Height="38" Width="142" Foreground="#FFFF7B00" Background="#FF1A1A1A" BorderBrush="#FFFF7B00"/>
+            <Button x:Name="btnSearch_package" Click="btnSearch_package_Click" Content="Search" HorizontalAlignment="Left" Margin="448,86,0,0" VerticalAlignment="Top" Height="38" Width="142" Foreground="#FFFF7B00" Background="#FF1A1A1A" BorderBrush="#FFFF7B00"/>
         </Grid>
 
         <Grid x:Name="grid_wallet" Margin="205,0,0,0" Visibility="Collapsed">
@@ -134,9 +135,9 @@
             <Label x:Name="lblPassword" HorizontalAlignment="Left" Margin="394,258,0,0" FontSize="18" VerticalAlignment="Top" Width="272" Foreground="Red" Height="58" HorizontalContentAlignment="Center"></Label>
 
         </Grid>
-        <Grid x:Name="grid_information" Margin="205,10,10,0" Visibility="Collapsed">
-            <CheckBox x:Name="expensive_checkbox_information" Content="Expensive" HorizontalAlignment="Left" Margin="36,389,0,0" VerticalAlignment="Top" Height="33" Width="234" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
-            <TextBlock x:Name="weigh_txtblock_information" HorizontalAlignment="Left" Margin="627,162,0,0" TextWrapping="Wrap" Text="Weigh" VerticalAlignment="Top" Height="52" Width="117" FontSize="24">
+        <Grid x:Name="grid_showPackage" Visibility="Visible" Margin="205,10,0,0" >
+            <CheckBox x:Name="expensive_checkbox_showpack" IsHitTestVisible="False" Focusable="False" IsEnabled="False" Content="Expensive" HorizontalAlignment="Left" Margin="614,421,0,0" VerticalAlignment="Top" Height="33" Width="234" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <TextBlock x:Name="weight_txtblock_showpack" HorizontalAlignment="Left" Margin="627,162,0,0" TextWrapping="Wrap" Text="Weigh" VerticalAlignment="Top" Height="52" Width="117" FontSize="24">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FFFF7B00" Offset="1"/>
@@ -144,7 +145,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
-            <TextBlock x:Name="reciever_txtblock_information" HorizontalAlignment="Left" Margin="627,31,0,0" TextWrapping="Wrap" Text="Reciever" VerticalAlignment="Top" Height="52" Width="117" FontSize="24">
+            <TextBlock x:Name="reciever_txtblock_showpack" HorizontalAlignment="Left" Margin="627,31,0,0" TextWrapping="Wrap" Text="Reciever" VerticalAlignment="Top" Height="52" Width="117" FontSize="24" Grid.Column="1">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FFFF7B00" Offset="1"/>
@@ -152,7 +153,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
-            <TextBlock x:Name="sender_txtblock_information" HorizontalAlignment="Left" Margin="36,31,0,0" TextWrapping="Wrap" Text="Sender" VerticalAlignment="Top" Height="52" Width="118" FontSize="24">
+            <TextBlock x:Name="sender_txtblock_showpack" HorizontalAlignment="Left" Margin="36,31,0,0" TextWrapping="Wrap" Text="Sender" VerticalAlignment="Top" Height="52" Width="118" FontSize="24" Grid.Column="1">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FFFF7B00" Offset="1"/>
@@ -160,7 +161,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
-            <TextBlock x:Name="Type_txtblock_information" HorizontalAlignment="Left" Margin="627,287,0,0" TextWrapping="Wrap" Text="Type" VerticalAlignment="Top" Height="50" Width="209" FontSize="24">
+            <TextBlock x:Name="Type_txtblock_showpack" HorizontalAlignment="Left" Margin="627,287,0,0" TextWrapping="Wrap" Text="Type" VerticalAlignment="Top" Height="50" Width="209" FontSize="24">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FFFF7B00" Offset="1"/>
@@ -168,7 +169,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
-            <TextBlock x:Name="packagecontent_txtblock_information" HorizontalAlignment="Left" Margin="36,167,0,0" TextWrapping="Wrap" Text="Package Content" VerticalAlignment="Top" Height="52" Width="235" FontSize="24">
+            <TextBlock x:Name="packagecontent_txtblock_showpack" HorizontalAlignment="Left" Margin="36,167,0,0" TextWrapping="Wrap" Text="Package Content" VerticalAlignment="Top" Height="52" Width="235" FontSize="24">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FFFF7B00" Offset="1"/>
@@ -176,15 +177,29 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
-            <Label x:Name="sender_lbl_information" Content="Label" HorizontalAlignment="Left" Margin="36,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
-            <Label x:Name="reciever_lbl__information" Content="Label" HorizontalAlignment="Left" Margin="627,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
-            <Label x:Name="weigh_lbl_information" Content="Label" HorizontalAlignment="Left" Margin="627,215,0,0" VerticalAlignment="Top" Height="54" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" />
-            <CheckBox x:Name="vip_checkbox1" Checked="vip_checkbox_Checked" Content="VIP" HorizontalAlignment="Left" Margin="627,349,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
-            <CheckBox x:Name="usuall_checkbox1" Checked="usuall_checkbox_Checked" Content="Usuall" HorizontalAlignment="Left" Margin="627,387,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" FontWeight="Bold" Width="89"/>
-            <CheckBox x:Name="breack_checkbox1" Checked="breack_checkbox_Checked" Content="Breackable" HorizontalAlignment="Left" Margin="36,215,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
-            <CheckBox x:Name="doc_checkbox1" Checked="doc_checkbox_Checked" Content="Document" HorizontalAlignment="Left" Margin="36,251,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
-            <CheckBox x:Name="object_checkbox1" Checked="object_checkbox_Checked" Content="Object" HorizontalAlignment="Left" Margin="36,287,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
+            <Label x:Name="sender_lbl" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="36,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
+            <Label x:Name="reciever_lbl" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="627,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
+            <Label x:Name="weigh_lbl" Content="Label" HorizontalAlignment="Left" Margin="627,215,0,0" VerticalAlignment="Top" Height="54" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" />
+            <TextBox x:Name="comment_tb" IsEnabled="False" TextChanged="comment_tb_TextChanged" TextWrapping="Wrap" Text="" Margin="36,483,28,47" Background="White"/>
+            <TextBlock x:Name="status_txtblock" HorizontalAlignment="Left" Margin="36,336,0,0" TextWrapping="Wrap" Text="Status" VerticalAlignment="Top" Height="52" Width="118" FontSize="36">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <CheckBox x:Name="regsitered_checkbox" IsHitTestVisible="False" Focusable="False" Content="Registered" HorizontalAlignment="Left" Margin="45,388,0,0" VerticalAlignment="Top" Height="33" Width="117" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="ready__checkbox" IsHitTestVisible="False" Focusable="False" Content="Ready for send" HorizontalAlignment="Left" Margin="182,388,0,0" VerticalAlignment="Top" Height="33" Width="138" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="sending_checkbox" IsHitTestVisible="False" Focusable="False" Content="Sending" HorizontalAlignment="Left" Margin="45,421,0,0" VerticalAlignment="Top" Height="34" Width="117" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="delivered_checkbox"  Content="Delivered" HorizontalAlignment="Left" Margin="182,422,0,0" VerticalAlignment="Top" Height="34" Width="122" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="Usual_checkbox_showpack" IsHitTestVisible="False" Focusable="False" Content="Usual" HorizontalAlignment="Left" Margin="627,337,0,0" VerticalAlignment="Top" Height="33" Width="105" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="Vip_checkbox_showpack" Content="VIP" HorizontalAlignment="Left" IsHitTestVisible="False" Focusable="False" Margin="627,370,0,0" VerticalAlignment="Top" Height="33" Width="105" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="checkbox_breack" IsHitTestVisible="False" Focusable="False"  Content="Breackable" HorizontalAlignment="Left" Margin="45,238,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
+            <CheckBox x:Name="checkbox_doc" IsHitTestVisible="False" Focusable="False" Content="Document" HorizontalAlignment="Left" Margin="45,217,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
+            <CheckBox x:Name="checkbox_object" IsHitTestVisible="False" Focusable="False"  Content="Object" HorizontalAlignment="Left" Margin="45,269,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
         </Grid>
+
 
 
 
